[package]
name = "blob_store"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2"
md5 = "0.7"
uuid = { version = "1", features = ["v4"] }
aws-config = "1"
aws-sdk-s3 = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
aws-config = "1"
aws-sdk-s3 = "1"
